--- a/src/main/resources/templates/thymeleaf/band/myBand.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand.html
@@ -15,98 +15,109 @@
             </ul>
         </div>
       -->
-      
         <!-- myBandContent -->
         <div class="myBand_content">
-            <div class="container myBand_contentBox px-0 d-flex flex-md-column flex-sm-column flex-lg-row ">
-                <!-- col1 밴드 이미지, 제목 정보 영역 -->
-            <div class="col-12 col-lg-3 myBand_content_col_titleBox me-5">
-               <div class="myBand_content_col_title sticky-md-top flex-column mr-md-5">
-                  <div class="myBand_title_img">
-                     <img
-                        th:src="@{'../img/uploadBandThumnail/'+ ${myBandList.getBand_thumnail()}}"
-                        class="img-fluid join_band_item_img" alt="...">
-                  </div>
-                  <div class="myBand_title_name d-flex justify-content-between">
-                     <h3 th:text="${myBandList.getBand_name()}"></h3>
-
-                     <!-- 로그인 아이디와 밴드 관리자 아이디가 같을 때 -->
-                     <th:block th:if="${session.Member_Id ne null}">
-                        <th:block
-                           th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
-                           <a
-                              th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}"
-                              class="myBand_adminBandSet py-1">밴드 설정</a>
-                        </th:block>
-                        <th:block
-                           th:if="${ session.Member_Id ne myBandList.getBand_admin() and  checkMember ne null}">
-                           <a
-                              th:href="@{'withdrawalMyBand?bandUrl='+${myBandList.getBand_code()}}"
-                              class="myBand_memberBandSet py-1"
-                              onclick="return func_bandWithdrawal() ">밴드 탈퇴하기</a>
-                        </th:block>
-                     </th:block>
-                  </div>
-                  <div id="myBand_member_countBtn" class="myBand_member_count" onclick="return func_bandMember()">
-                     <a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
-                        <span th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
-                     </a>
-                  </div>
-                  
-                  <div class="myBand_info">
-                     <span th:text="${myBandList.getBand_content()}"></span>
-                  </div>
-                  
-                  
-                  
-                  <!-- 가입한 밴드 확인 영역 -->
-                  <th:block th:if="${checkMember == null}">
-                     <form action="addBandMember" method="post" name="addMember_band">
-                        <div class="myBand_write_btn">
-                           <input name="bandCode" type="hidden" th:value="${myBandList.getBand_code()}" />
-                           <input name="joinMemberId" type="hidden" th:value="${session.Member_Id}" />
-                           <a href="javascript:addMember_band.submit();" >
-                              <span>가입하기</span>
-                           </a>                        
-                        </div>      
-                     </form>
-                  </th:block>
-                  <th:block th:unless="${checkMember == null}">
-                     <div class="myBand_write_btn btn-main">
-                        <a
-                           th:href="@{'bandFeedWrite?bandUrl='+${myBandList.getBand_code()}}">
-                           <span>글쓰기</span>
-                        </a>
-                     </div>
-                  </th:block>
-                  
-                  
-                  
-                  <!-- 밴드 채팅 리스트 영역 -->
-                  <!-- <th:block th:if="${session.Member_Id ne null}">
-                     <div class="band_chatBox px-1 mt-5 w-100">
-                        <div class="band_chat col-12">
-                           <p class="fw-bold pb-0 mb-0">채팅</p>
-                           <hr class="m-0" />
-                           채팅 내역이 올 영역
-                           
-                           
-                        </div>
-                     </div> band_chatBox
-                  </th:block> -->
-                  
-               </div> <!-- myBand_content_col_title -->
-            </div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
-
-
-            <!-- col2 밴드 게시글 영역 -->
-                <div class="col-12 col-lg-7 myBand_content_col_content mt-5" >
+            <div class="row gap-3 m-auto justify-content-around container myBand_contentBox px-0">
+	            <!-- col1 밴드 이미지, 제목 정보 영역 -->
+	            <div class="col-12 col-lg-3 myBand_content_col_titleBox p-4">
+	               <div class="myBand_content_col_title sticky-md-top flex-column mr-md-5">
+	                  <div class="myBand_title_img">
+	                     <img
+	                        th:src="@{'../img/uploadBandThumnail/'+ ${myBandList.getBand_thumnail()}}"
+	                        class="img-fluid join_band_item_img" alt="...">
+	                  </div>
+	                  <div class="myBand_title_name d-flex justify-content-between">
+	                     <h3 th:text="${myBandList.getBand_name()}"></h3>
+	
+	                     <!-- 로그인 아이디와 밴드 관리자 아이디가 같을 때 -->
+	                     <th:block th:if="${session.Member_Id ne null}">
+	                        <th:block
+	                           th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
+	                           <a
+	                              th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}"
+	                              class="myBand_adminBandSet py-1 hstack d-flex"><span class="hstack">밴드 설정</span></a>
+	                        </th:block>
+	                        <th:block
+	                           th:if="${ session.Member_Id ne myBandList.getBand_admin() and  checkMember ne null}">
+	                           <a
+	                              th:href="@{'withdrawalMyBand?bandUrl='+${myBandList.getBand_code()}}"
+	                              class="myBand_memberBandSet py-1"
+	                              onclick="return func_bandWithdrawal() ">밴드 탈퇴하기</a>
+	                        </th:block>
+	                     </th:block>
+	                  </div>
+	                  <div id="myBand_member_countBtn" class="myBand_member_count" onclick="return func_bandMember()">
+	                     <a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
+	                        <span th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
+	                     </a>
+	                  </div>
+	                  
+	                  <div class="myBand_info">
+	                     <span th:text="${myBandList.getBand_content()}"></span>
+	                  </div>
+	
+	                  
+	                  <!-- 가입한 밴드 확인 영역 -->
+	                  <th:block th:if="${checkMember == null}">
+	                     <form action="addBandMember" method="post" name="addMember_band">
+	                        <div class="myBand_write_btn">
+	                           <input name="bandCode" type="hidden" th:value="${myBandList.getBand_code()}" />
+	                           <input name="joinMemberId" type="hidden" th:value="${session.Member_Id}" />
+	                           <a href="javascript:addMember_band.submit();" >
+	                              <span>가입하기</span>
+	                           </a>                        
+	                        </div>      
+	                     </form>
+	                  </th:block>
+	                  <th:block th:unless="${checkMember == null}">
+	                     <div class="myBand_write_btn rounded-3 btn-main">
+	                        <a
+	                           th:href="@{'bandFeedWrite?bandUrl='+${myBandList.getBand_code()}}">
+	                           <span class="text-dark f15">글쓰기</span>
+	                        </a>
+	                     </div>
+	                  </th:block>
+	                  
+	                  
+	                  
+	                  <!-- 밴드 채팅 리스트 영역 -->
+	                  <!-- <th:block th:if="${session.Member_Id ne null}">
+	                     <div class="band_chatBox px-1 mt-5 w-100">
+	                        <div class="band_chat col-12">
+	                           <p class="fw-bold pb-0 mb-0">채팅</p>
+	                           <hr class="m-0" />
+	                           채팅 내역이 올 영역
+	                           
+	                           
+	                        </div>
+	                     </div> band_chatBox
+	                  </th:block> -->
+	                  
+	               </div> <!-- myBand_content_col_title -->
+	            </div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
+				
+             	<!-- col2 밴드 게시글 영역 -->
+                <div class="col-12 col-lg myBand_content_col_content mt-5 mt-md-0">
+                		<!-- 피드목록이 비어있을 때 -->
+						<div th:if="${myBandFeedList.empty}">
+							<div class="row my-5 gap-3">
+								<div class="col text-center py-5 my-5">
+									<img src="../img/feed/out-of-stock.png" class="mb-4" width="100" height="100" alt=""/>
+									<span class="h5 text-muted d-block">현재
+									글 목록이 비어있어요</span>
+									<span class="text-muted d-block"><span class="d-inline-block text-muted" th:text="|${session.Member_Name}님이|" th:if="${session.Member_Id}!=null"></span> 먼저 작성해보세요!</span>
+									<a href="/feed_write" class="m-auto text-center btn btn-main my-4 p-2 px-5 f14">
+									글 작성하러 가기 </a>
+								</div>
+							</div>
+						</div>
+                	
                    <!--  <div class="myBand_content_search">
                         <span>글 내용, #태그, @작성자 검색</span>
                         <img class="search_img" src="../img/common/btn_header_search.png" alt="">
                         <span th:text="${feedwriterImg.getMember_profileimage()}"></span>
                     </div> -->
-                    <div class="myBand_content_item mb-5" th:each="myBandFeedList:${myBandFeedList}" >
+                    <div class="myBand_content_item rounded-4 shadow-s my-5 p-5" th:each="myBandFeedList:${myBandFeedList}" >
                     
                         
                           <div class="myBand_content_item_writer d-flex flex-row">
@@ -114,7 +125,7 @@
                                <img class="myBand_content_item_writer_profile" th:src="@{'../img/member_thumbnail/'+${myBandFeedList.getMember_profileimage()}}"  alt="#">
                                
                                <div class="myBand_content_item_writer_info">
-                                   <strong th:text="${myBandFeedList.getMember_id()}">작성자 아이디</strong>
+                                   <strong class="my-2" th:text="${myBandFeedList.getMember_id()}">작성자 아이디</strong>
                                    <span>작성 시간 <span th:text="${myBandFeedList.getBand_feed_uploadday()}"></span></span>
                                </div>
                             
@@ -164,7 +175,7 @@
                         
                     </div>
                 </div>
-               
+
                 
             </div>  <!-- myBand_contentBox -->
         </div>
