--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -21,7 +21,6 @@ div.myBand_content{
 /* col1 밴드 이미지, 제목 정보 영역 스타일 */
 div.myBand_content_col_titleBox{
 	position : relative;
-	margin-top : 20px;
 }
 div.myBand_content_col_title{
 	margin-top : 20px;
@@ -58,7 +57,8 @@ a.myBand_adminBandSet::before, a.myBand_memberBandSet::before{
 	display : inline-block; 
 	width: 14px;
 	height: 14px;
-	margin-top : 5px;
+	margin-top : 3px;
+	margin-right: 3px;
 	background-image: url('../img/common/pngegg.png');
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -68,12 +68,9 @@ a.myBand_adminBandSet::before, a.myBand_memberBandSet::before{
 div.myBand_write_btn{
     width: 100%;
     height: 50px;
-    border-radius: 20px;
 }
 div.myBand_write_btn span{
     display: block;
-    color : white;
-    font-size: 22px;
     text-align: center;
     line-height: 50px;;
 }
@@ -107,7 +104,6 @@ a.band_feed_list_link{
 }
 div.myBand_content_item{
     padding: 20px;
-    box-shadow: 4px 7px 15px 0px rgba(51, 51, 51, 0.28);
 }
 div.myBand_content_item_view{
 	padding: 20px;
@@ -151,7 +147,7 @@ div.myBand_content_item_writer_info{
 div.myBand_content_item_writer_info>strong{
 	display: block;
     font-size: 20px;
-    margin-bottom : 25px;
+    margin-top : 25px;
 }
 div.myBand_content_item_writer_info>span{
     display: block;
