--- a/src/main/resources/templates/thymeleaf/band/myBand_feedView.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand_feedView.html
@@ -15,12 +15,12 @@
             </ul>
         </div>
 		-->
-		
+
         <!-- myBandContent -->
         <div class="myBand_content">
-            <div class="container myBand_contentBox px-0 d-flex flex-md-column flex-sm-column flex-lg-row ">
+            <div class="row m-auto justify-content-around container myBand_contentBox px-0">
                 <!-- col1 밴드 이미지, 제목 정보 영역 -->
-				<div class="col-12 col-lg-3 myBand_content_col_titleBox">
+				<div class="col-12 col-lg-3 myBand_content_col_titleBox p-4">
 					<div class="myBand_content_col_title sticky-md-top flex-column mr-md-5">
 						<div class="myBand_title_img">
 							<img
@@ -97,16 +97,15 @@
 						
 					</div> <!-- myBand_content_col_title -->
 				</div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
-
-
+				
 				<!-- col2 밴드 게시글 영역 -->
-                <div class="col-12 col-lg-7 myBand_content_col_content mt-5" >
+                <div class="col-12 col-lg myBand_content_col_content mt-5 mt-md-0">
                    <!--  <div class="myBand_content_search">
                         <span>글 내용, #태그, @작성자 검색</span>
                         <img class="search_img" src="../img/common/btn_header_search.png" alt="">
                         <span th:text="${feedwriterImg.getMember_profileimage()}"></span>
                     </div> -->
-                    <div class="myBand_content_item " th:each="myBandFeedList:${myBandFeedList}">
+                    <div class="myBand_content_item" th:each="myBandFeedList:${myBandFeedList}">
                         <div class="myBand_content_item_writer">
                             <img class="myBand_content_item_writer_profile" th:src="@{'../img/member_thumbnail/'+${myBandFeedList.getMember_profileimage()}}"  alt="#">
                             <div class="myBand_content_item_writer_info">
