--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -337,7 +337,7 @@
 									height="50" alt="">
 								<!--feed box text-->
 								<div class="col px-0">
-									<span class="float-start fw-bold f15"
+									<span class="float-start fw-bold f16"
 										th:text="${feed.Member_Id}">박검지</span><br> <span
 										class="float-start text-muted f13">하이라이트</span> <span
 										class="float-start text-muted f13 ms-3">2시간 전</span>
@@ -651,19 +651,19 @@
 		</section> <!-- home_data_lab -->
 		<div class="w-100 py-5 my-5"></div><!-- 여백 박스 -->
 	<section class="home_info_data container my-5">
-		<div class="row home_info_data_wrap text-center">
-			<div class="col-12 col-lg-6 home_info_data_img py-lg-5">
-				<img src="../img/home/main/home_info_data_img.png" class="rounded ">
+		<div class="row gap-3 home_info_data_wrap text-center">
+			<div class="col-12 col-lg-4 home_info_data_img py-lg-5 m-auto">
+				<img src="../img/home/main/home_info_data_img.png" class="rounded-4">
 			</div><!--home_info_data_img-->
-			<div class="col-12 col-lg-6 home_info_data_text text-start py-lg-5 mt-5 mt-lg-0 ms-lg-0 px-0">
-				<div class="fs-4 fw-bold"><a href="info" class="text-dark ps-5">오늘의 여행 소식</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">2024 여행 가는 달 | 대한민국 숙박 세일
+			<div class="col-12 col-lg-5 home_info_data_text text-start  m-auto py-lg-5 mt-5 mt-lg-0 ms-lg-0 px-0">
+				<div class="fs-4 fw-bold"><a href="info" class="text-dark px-2 f22 highlight">오늘의 여행 소식</a></div>
+				<div class="fs-5 my-2 border-bottom py-2"><a href="" class="text-dark ps-3 f17">2024 여행 가는 달 | 대한민국 숙박 세일
 						페스타</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">캐리어 기자단 | '다님' 9기 모집</a>
+				<div class="fs-5 my-2 border-bottom py-2"><a href="" class="text-dark ps-3 f17">캐리어 기자단 | '다님' 9기 모집</a>
 				</div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">캐리어 대학생 기자단 | '트래블리더' 16기
+				<div class="fs-5 my-2 border-bottom py-2"><a href="" class="text-dark ps-3 f17">캐리어 대학생 기자단 | '트래블리더' 16기
 						모집</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">2024 제9기 영남 알프스 학교 수강생
+				<div class="fs-5 my-2 border-bottom py-2"><a href="" class="text-dark ps-3 f17">2024 제9기 영남 알프스 학교 수강생
 						모집</a></div>
 			</div><!--home_info_data_text-->
 		</div><!--home_info_data_wrap-->
