--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -41,6 +41,14 @@ a.indent {
 	color: var(--black);
 }
 
+.text-black{
+	color: var(--darkBlack);
+}
+
+.text-pink{
+	color: var(--nottedDeepPink);
+}
+
 .highlight{
 	padding: 0 15px;
 	box-shadow: inset 0 -12px 0 var(--main);
@@ -50,6 +58,7 @@ a.indent {
 :root {
 	--vh: 9.59px;
 	--black: #3c3c3c;
+	--darkBlack: #212121;
 	--white: #ffffff;
 	--deepgray: #a5a5a5;
 	--gray: #f0f0f0;
@@ -59,6 +68,7 @@ a.indent {
 	--nottedskyblue: #87cefa;
 	--nottedpink: #fdfaf7;
 	--nottedpinkD: #f8c9df;
+	--nottedDeepPink: #ffa2cb;
 	--nottedbrown: #EAC88f;
 }
 
@@ -134,6 +144,11 @@ a.indent {
 .bg-brown {
 	background-color: var(--nottedbrown) !important;
 }
+
+.bg-trans{
+	background: rgba(255,255,255,0);
+}
+
 /* BTN 버튼 색상 정의 */
 .btn-main {
 	background-color: var(--main) !important;
