--- a/src/main/resources/static/css/info.css
+++ b/src/main/resources/static/css/info.css
@@ -62,3 +62,20 @@
 .current-page{
 	font-weight: bold;
 }
+
+
+/* 결제 페이지 del 버튼 */
+.pay-del-btn{
+	position: absolute;
+	top: 0;
+	right: 0;
+    margin-top: -15px;
+    margin-right: -15px;
+    z-index: 1;
+}
+
+
+#feed_del_Modal .modal-content{
+	overflow: unset;
+}
+
