--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -181,9 +181,9 @@
 											<div class="modal-body text-center py-3">
 												정말 삭제하시겠습니까?
 											</div>
-											<div class="modal-footer">
-												<button type="button" class="btn btn-light text-dark rounded-pill px-2" data-bs-dismiss="modal">취소</button>
-												<button type="button" class="btn btn-main rounded-pill px-2">
+											<div class="modal-footer border-none">
+												<button type="button" class="btn btn-light text-dark rounded-pill px-3" data-bs-dismiss="modal">취소</button>
+												<button type="button" class="btn btn-main rounded-pill px-3">
 												<a class="dropdown-item active" th:href="@{'/delFeed?num='+${feed.Feed_num}}">삭제</a>
 												</button>
 											</div>
