--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -651,11 +651,11 @@
 		</section> <!-- home_data_lab -->
 		<div class="w-100 py-5 my-5"></div><!-- 여백 박스 -->
 	<section class="home_info_data container my-5">
-		<div class="row gap-3 home_info_data_wrap text-center">
-			<div class="col-12 col-lg-4 home_info_data_img py-lg-5 m-auto">
-				<img src="../img/home/main/home_info_data_img.png" class="rounded-4">
+		<div class="row justify-content-around gap-5 home_info_data_wrap text-center m-auto">
+			<div class="col-12 col-lg-5 home_info_data_img p-0 m-0 hstack ms-lg-5">
+				<img src="../img/home/main/home_info_data_img.png" class="img-fluid rounded-4 m-auto ms-lg-auto">
 			</div><!--home_info_data_img-->
-			<div class="col-12 col-lg-5 home_info_data_text text-start  m-auto py-lg-5 mt-5 mt-lg-0 ms-lg-0 px-0">
+			<div class="col-11 col-lg-5 home_info_data_text text-start m-auto mt-3 mt-md-0">
 				<div class="fs-4 fw-bold"><a href="info" class="text-dark px-2 f22 highlight">오늘의 여행 소식</a></div>
 				<div class="fs-5 my-2 border-bottom py-2"><a href="" class="text-dark ps-3 f17">2024 여행 가는 달 | 대한민국 숙박 세일
 						페스타</a></div>
