--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -4,6 +4,7 @@
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
 	<div th:replace="~{alert/toast::div}"></div>
+	<div th:replace="~{alert/pay_modal::div}"></div>
 	<div id="info" class="container-fluid mt-4 mb-3">
 		<div class="container px-4 px-sm-5 pt-4">
 			<div class="row">
