--- a/src/main/resources/templates/alert/pay_modal.html
+++ b/src/main/resources/templates/alert/pay_modal.html
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 					<div class="modal-footer border-none pb-5 bg-white w-100">
-						<a href="/pay"
+						<a href="/checkout"
 							class="btn btn-pinkD m-auto rounded-pill py-2 px-4">결제하기
 						</a>
 					</div>
