--- a/src/main/resources/templates/thymeleaf/info/infoCourse.html
+++ b/src/main/resources/templates/thymeleaf/info/infoCourse.html
@@ -2,128 +2,130 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <div th:replace="~{head/head::head}"></div>
 <body>
-	<div th:replace="~{nav/nav::nav}"></div>
-	<div th:replace="~{alert/toast::div}"></div>
-	<div id="info" class="container-fluid mt-4 mb-3 ">
-		<div class="container px-4 px-sm-5 pt-4">
-			<div class="row">
-				<div class="col-10 col-lg-7 mx-auto">
-					<h3 class="text-bold">
-						# 전체
-					</h3>
-				</div>
-			</div>
-			<!--board-->
-			<div class="row gap-4">
-				<div class="col-10 col-lg-7 mx-auto order-2">
-					<hr>
-					<div class="row">
-						<div class="col">
-							총 <span class="blue-text text-bold" th:text="${getCount}"></span>건
-						</div>
-						<div class="col-12 col-md-7 text-end mt-2 mt-md-0">
-							<!-- <span class="active">최신순</span> <span>거리순</span> <span>인기순</span> -->
-						</div>
-					</div>
-					<hr>
-					<div class="board row">
-						<!--board-->
-						<div class="row" th:each="list:${list}">
-							<a th:href="@{'Course_view?num='+ ${list.getCourse_num()}}"
-								class="row">
-								<div class="col-3 board-left text-center hstack justify-content-center">
-									<img th:src="@{'../img/info/' + ${list.getCourse_img()}}"
-										class="img-fluid rounded-4" alt=""
-										style="width: 80px; height: 80px;">
-								</div>
-								<div class="col">
-									<div class="row">
-										<div class="col">
-											<h5 style="line-height: 80px;">
-												[<span th:text="${list.getMember_Id()}"></span>] <span
-													th:text="${list.getCourse_Name()}"></span>
-											</h5>
-										</div>
-									</div>
-									
-								</div>
-							</a>
-							<hr class="mt-3 ms-3">
-						</div>
-						<!--------->
+   <div th:replace="~{nav/nav::nav}"></div>
+   <div th:replace="~{alert/toast::div}"></div>
+   <div id="info" class="container-fluid mt-4 mb-3 ">
+      <div class="container px-4 px-sm-5 pt-4">
+         <div class="row">
+            <div class="col-10 col-lg-7 mx-auto">
+               <h3 class="text-bold">
+                  # 전체
+               </h3>
+            </div>
+         </div>
+         <!--board-->
+         <div class="row gap-4">
+            <div class="col-10 col-lg-7 mx-auto order-2">
+               <hr>
+               <div class="row">
+                  <div class="col">
+                     총 <span class="blue-text text-bold" th:text="${getCount}"></span>건
+                  </div>
+                  <div class="col-12 col-md-7 text-end mt-2 mt-md-0">
+                     <!-- <span class="active">최신순</span> <span>거리순</span> <span>인기순</span> -->
+                  </div>
+               </div>
+               <hr>
+               <div class="board row">
+                  <!--board-->
+                  <div class="row evendiv" th:each="list:${list}">
+                     <a th:href="@{'Course_view?num='+ ${list.getCourse_num()}}"
+                        class="row">
+                        <div class="col-3 board-left text-center">
+                           <img th:src="@{'../img/info/' + ${list.getCourse_img()}}"
+                              class="img-fluid rounded-4" alt=""
+                              style="width: 80px; height: 80px;">
+                        </div>
+                        <div class="col">
+                           <div class="row">
+                              <div class="col">
+                                 <h5 style="line-height: 80px;">
+                                    [<span th:text="${list.getMember_Id()}"></span>] <span
+                                       th:text="${list.getCourse_Name()}"></span>
+                                 </h5>
+                              </div>
+                           </div>
+                           
+                        </div>
+                     </a>
+                     <hr class="mt-3 ms-3">
+                  </div>
+                  <!--------->
 
-					</div>
-					
-					<!-- 페이징 -->
-					<div class="pagination "	>
-						<ul class="d-flex">
-							<!-- 이전 버튼 -->
-							<li th:if="${currentPage > 1}" class="mx-2"><a
-								th:href="@{'/infoCourse?page=' + ${mPage}}">&laquo;
-									이전</a></li>
+               </div>
+               
+               <!-- 페이징 -->
+               <div class="pagination "   >
+                  <ul class="d-flex">
+                     <!-- 이전 버튼 -->
+                     <li th:if="${currentPage > 1}" class="mx-2"><a
+                        th:href="@{'/infoCourse?page=' + ${mPage}}">&laquo;
+                           이전</a></li>
 
-							<!-- 페이지 번호 -->
-							<li
-								th:each="pageNum : ${#numbers.sequence((currentPage - 4 > 0 ? currentPage - 4 : 1), 
+                     <!-- 페이지 번호 -->
+                     <li
+                        th:each="pageNum : ${#numbers.sequence((currentPage - 4 > 0 ? currentPage - 4 : 1), 
                         (currentPage + 4 < totalPages ? currentPage + 4 : totalPages))}"
-								class="mx-2"><a
-								th:href="@{'/infoCourse?page=' + ${pageNum}}"
-								th:text="${pageNum}"
-								th:class="${currentPage == pageNum} ? 'current-page' : ''"></a>
-							</li>
+                        class="mx-2"><a
+                        th:href="@{'/infoCourse?page=' + ${pageNum}}"
+                        th:text="${pageNum}"
+                        th:class="${currentPage == pageNum} ? 'current-page' : ''"></a>
+                     </li>
 
-							<!-- 다음 버튼 -->
-							<li th:if="${currentPage < totalPages}" class="mx-2"><a
-								th:href="@{'/infoCourse?page=' + ${pPage}}">다음
-									&raquo;</a></li>
-						</ul>
-					</div>
-								
-					<div class="fixed-bottom ">
-						<img src="../img/aicc/img_robot1.png" alt=""
-								class="d-block ms-auto robot m-4 ">
-								
-					</div>
-					
-				<!------------우측 (필터)------------->
-				<!-- <div
-					class="sticky-top h-100 p-4 info-filter-sticky-top
-					col order-1 order-lg-2 border mt-3 p-2 ms-md-2 px-md-4 order-1 rounded-4">
-					새로고침 버튼
-					<a href="#" class="btn-refresh ms-auto mt-2 me-2"></a>
-					<div class="row">
-						<div class="col-12">
-							<a href="info" class="btn rounded-pill px-3 btn-dark f14  mx-1 mb-2 ">#
-								전체</a> <a th:href="@{'Event_area?area='+${area}}"
-								class="btn rounded-pill px-3 btn-outline-dark f14 mx-1 mb-2"
-								th:each="area:${area}"># <span th:text="${area}"></span>
-							</a>
-						</div>
-						<div class="col">
-							<hr>
-						</div>
-						<div class="col-12 mt-1">
-							<a href="info" class="btn rounded-pill px-3 btn-dark f14 mx-1 mb-2">#
-								전체 태그</a>
-							<button type="button" class="btn rounded-pill px-3 btn-outline-dark f14 mx-1 mb-2"
-								th:each="tag : ${tags}">
-								<a th:href="@{'Event_tags?tagss='+${tag}}"
-									th:if="${tag != null}"># <span th:text="${tag}"></span></a>
-							</button>
-						</div>
-					</div>
-				</div> -->
-			</div>
-			
-			
-		</div>
-			<div class="text-end m-4">
-									<a href="aicc"class="text-black ms-auto btn btn-main">여행 코스짜러가기</a>
-			</div>
-	</div>
+                     <!-- 다음 버튼 -->
+                     <li th:if="${currentPage < totalPages}" class="mx-2"><a
+                        th:href="@{'/infoCourse?page=' + ${pPage}}">다음
+                           &raquo;</a></li>
+                  </ul>
+               </div>
+                        
+               <div class="fixed-bottom ">
+               
+                  <img src="../img/aicc/img_robot1.png" alt=""
+                        class="d-block ms-auto robot m-4 " >
+                        
+               </div>
+               
+               
+            <!------------우측 (필터)------------->
+            <!-- <div
+               class="sticky-top h-100 p-4 info-filter-sticky-top
+               col order-1 order-lg-2 border mt-3 p-2 ms-md-2 px-md-4 order-1 rounded-4">
+               새로고침 버튼
+               <a href="#" class="btn-refresh ms-auto mt-2 me-2"></a>
+               <div class="row">
+                  <div class="col-12">
+                     <a href="info" class="btn rounded-pill px-3 btn-dark f14  mx-1 mb-2 ">#
+                        전체</a> <a th:href="@{'Event_area?area='+${area}}"
+                        class="btn rounded-pill px-3 btn-outline-dark f14 mx-1 mb-2"
+                        th:each="area:${area}"># <span th:text="${area}"></span>
+                     </a>
+                  </div>
+                  <div class="col">
+                     <hr>
+                  </div>
+                  <div class="col-12 mt-1">
+                     <a href="info" class="btn rounded-pill px-3 btn-dark f14 mx-1 mb-2">#
+                        전체 태그</a>
+                     <button type="button" class="btn rounded-pill px-3 btn-outline-dark f14 mx-1 mb-2"
+                        th:each="tag : ${tags}">
+                        <a th:href="@{'Event_tags?tagss='+${tag}}"
+                           th:if="${tag != null}"># <span th:text="${tag}"></span></a>
+                     </button>
+                  </div>
+               </div>
+            </div> -->
+         </div>
+         
+         
+      </div>
+         <div class="text-end m-4">
+                           <a href="aicc"class="text-black ms-auto btn btn-main" >여행 코스짜러가기</a>
+         </div>
+   </div>
 </div>
-	<div th:replace="~{footer/footer::footer}"></div>
-	<script type="text/javascript">
+   <div th:replace="~{footer/footer::footer}"></div>
+   <script type="text/javascript">
         $(document).ready(function() {
             // URL에서 msg 매개변수 가져오기
             const urlParams = new URLSearchParams(window.location.search);
