--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -30,7 +30,7 @@
 				<h3 class="my-5 highlight d-inline-block">
 					[<span th:text="${view.getEvent_category()}">버튼</span>] 
 					<span
-						th:text="${view.getEvent_title()}"></span>
+						th:text="${view.getEvent_name()}"></span>
 				</h3>
 				<img th:src="@{'../img/info/' + ${view.getEvent_thumbnail()}}"
 					alt="" class="img-fluid mx-auto rounded-4">
